feat(appointments): Appointments service and logic finished
